--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <head>
 <link rel = "stylesheet" type = "text/css" href = "styles.css" />
 <meta charset="UTF-8">
-<h1>Hello Word  </h1>
+<h1>Hello Word Ampliacio</h1>
 </head>
 </html>
